arcade-k8s-config/k9s-dev/cavern/ingress/cavern-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cavern-ingress
  namespace: skaha-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /cavern/$2
    nginx.ingress.kubernetes.io/proxy-body-size: 100g
spec:
  tls:
  - hosts:
    - proto.canfar.net
    secretName: canfar-net-cert-secret
  rules:
  - host: proto.canfar.net
    http:
      paths:
      - path: /cavern(/|$)(.*)
        backend:
          serviceName: cavern-tomcat-svc
          servicePort: 8080
